Developer/src/objects/Campaign__c.object
<CustomObject>
    <fields>
        <fullName>CampaignGroupID__c</fullName>
        <label>キャンペーングループID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignImageURL__c</fullName>
        <formula>IF ( PictureID__c=NULL , NULL , &quot;/servlet/servlet.FileDownload?file=&quot; &amp; PictureID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>キャンペーン画像URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignImage__c</fullName>
        <formula>IF ( PictureID__c=NULL , NULL , IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; PictureID__c, &quot;キャンペーン写真&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>キャンペーン画像</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>キャンペーン説明</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDay__c</fullName>
        <label>終了年月日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PictureID__c</fullName>
        <label>画像ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseAmount__c</fullName>
        <label>販売金額</label>
        <summarizedField>CampaignGoods__c.SpecialTotalAmount__c</summarizedField>
        <summaryForeignKey>CampaignGoods__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>StartDay__c</fullName>
        <label>開始年月日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>キャンペーン</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>キャンペーン名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>